@@ -28679,6 +28679,9 @@ int main() {
                     }
                 }
             
+            // we clear this now, right after composing the GH message
+            // since various actions below may create more ghosts
+            // and we'll add those to the GH message next time.
             newGhostPlayers.deleteAll();
             }
 
@@ -28747,6 +28750,15 @@ int main() {
                     delete [] emotMessageText;
                     }
                 }
+
+
+            // we have to clear the emotes list NOW, right after composing
+            // this message.  If we wait until later, various actions, below
+            // may add new emotes to the list.  We need to save them for next
+            //  time, when we compose the next PE message
+            newEmotPlayerIDs.deleteAll();
+            newEmotIndices.deleteAll();
+            newEmotTTLs.deleteAll();
             }
 
         
@@ -30990,9 +31002,6 @@ int main() {
         newGraveMoves.deleteAll();
         
         
-        newEmotPlayerIDs.deleteAll();
-        newEmotIndices.deleteAll();
-        newEmotTTLs.deleteAll();
         
         newOwnerPos.deleteAll();
 
